:lipstick:style: 更改部分页面UI

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
-  <title>阵、雨的博客</title>
+  <title>Akita Planet</title>
 
   <!-- 允许加载 http 资源 -->
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
